404 and 500 error pages now load the uservoice widget and hide comments.

--- a/content/404.md
+++ b/content/404.md
@@ -1,5 +1,5 @@
-Libs: -comments
+Libs: -comments, uservoice
 
 # Page not found
 
-If you believe there is a problem with the site, [please leave a note](/support).
+If you believe there is a problem with the site, please email `support@imageresizing.net` or use the support widget at the bottom right of the window.
