--- a/content/500.md
+++ b/content/500.md
@@ -1,4 +1,6 @@
+Libs: uservoice, -comments
+
 # Sorry, something went wrong
 
-An error occurred while trying to serve your page. Please e-mail *support@imageresizing.net* (or contact us using [the support page widget](/support)) if this issue persists for more than a few minutes.
+An error occurred while trying to serve your page. Please e-mail *support@imageresizing.net* (or contact us using the support widget at the bottom-right) if this issue persists for more than a few minutes.
 
