Added pricing-2013 post, updated /buy and /plugins to use the new product codes

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,10 @@
 * Update docs/configuration-all
+* Update /history
 * Add support calendar schedule
 * Add support contract PDFs
+* Add breadcrumbs
+* Style /blog
+* Finish contest-2013
+
 * Finish /licenses/domain
-* Finish /plugins/*, /blog/ and /buy /history
+* Finish /plugins and /buy
