Fixed release pages and layouts (download buttons weren't appearing)

--- a/content/releases/3-0-11.md
+++ b/content/releases/3-0-11.md
@@ -2,7 +2,7 @@ Date: July 29 2011
 FullFile: http://downloads.imageresizing.net/Resizer3-0-11-full-Jul-28-2011.zip
 Tags: releases
 Summary: 5 bug fixes and 2 new plugins since alpha 10
-Template: release
+Layout: release
 
 # Resizer 3.0.11 - July 29 2011
 
