--- a/content/releases/3-1-4.md
+++ b/content/releases/3-1-4.md
@@ -4,7 +4,7 @@ MinFile: http://downloads.imageresizing.net/Resizer3-1-4-min-Jan-22-2012.zip
 Summary: 5 bug fixes, 2 minor new features
 ShortVersion: 3.1.4
 Tags: releases
-Template: release
+Layout: release
 Libs: plusone
 
 # Resizer 3.1.4 - Jan 22 2012
