--- a/content/releases/3-3-0.md
+++ b/content/releases/3-3-0.md
@@ -3,7 +3,7 @@ FullFile: http://downloads.imageresizing.net/Resizer3-3-0-full-Dec-4-2012.zip
 MinFile: http://downloads.imageresizing.net/Resizer3-3-0-min-Dec-4-2012.zip
 Summary: 10 bug fixes, 2 new filters, 2 new alpha plugins
 ShortVersion: 3.3.0
-Template: release
+Layout: release
 Libs: plusone
 Tags: releases
 
