--- a/content/releases/3-0-12.md
+++ b/content/releases/3-0-12.md
@@ -3,7 +3,7 @@ FullFile: http://downloads.imageresizing.net/Resizer3-0-12-full-Aug-15-2011.zip
 MinFile: http://downloads.imageresizing.net/Resizer3-0-12-min-Aug-15-2011.zip
 Summary: 12 bug fixes, 10 new features, 3 new plugins since 3.0.11
 Tags: releases
-Template: release
+Layout: release
 
 # Resizer 3.0.12 - Aug 15 2011
 
