--- a/content/releases/3-1-3.md
+++ b/content/releases/3-1-3.md
@@ -4,7 +4,7 @@ MinFile: http://downloads.imageresizing.net/Resizer3-1-3-min-Jan-14-2012.zip
 Summary: 2 new free plugins, 7 bug fixes
 ShortVersion: 3.1.3
 Tags: releases
-Template: release
+Layout: release
 Libs: plusone
 
 # Resizer 3.1.3 - Jan 14 2012
