--- a/content/releases/3-1-5.md
+++ b/content/releases/3-1-5.md
@@ -4,7 +4,7 @@ MinFile: http://downloads.imageresizing.net/Resizer3-1-5-min-Feb-22-2012.zip
 Summary: 19 bug fixes, 8 new features, 2 potentially breaking changes
 ShortVersion: 3.1.5
 Tags: releases
-Template: release
+Layout: release
 Libs: plusone
 
 
