--- a/content/releases/3-2-4.md
+++ b/content/releases/3-2-4.md
@@ -3,7 +3,7 @@ FullFile: http://downloads.imageresizing.net/Resizer3-2-4-full-Aug-6-2012.zip
 MinFile: http://downloads.imageresizing.net/Resizer3-2-4-min-Aug-6-2012.zip
 Summary: 7 bug fixes, S3Reader changes, 2 new alpha plugins
 ShortVersion: 3.2.4
-Template: release
+Layout: release
 Libs: plusone
 Tags: releases
 
