--- a/content/releases/3-3-1.md
+++ b/content/releases/3-3-1.md
@@ -3,7 +3,7 @@ FullFile: http://downloads.imageresizing.net/Resizer3-3-1-full-Dec-20-2012.zip
 MinFile: http://downloads.imageresizing.net/Resizer3-3-1-min-Dec-20-2012.zip
 Summary: 8 bug fixes, 1 new plugin
 ShortVersion: 3.3.1
-Template: release
+Layout: release
 Libs: plusone
 Tags: releases
 
