--- a/content/releases/3-2-4.md
+++ b/content/releases/3-2-4.md
@@ -17,10 +17,10 @@ Tags: releases
 # Bug fixes in 3.2.4
 
 * Fixed S3Reader CryptographicException concurrency bug with accessing private buckets. 
-* Fixed loophole permitting requests to execute while plugin loading is taking place. Should fix failed S3/Azure/Remote requests during a cold start.
+* Fixed loophole-permitting requests to execute while plugin loading is taking place. Should fix failed S3/Azure/Remote requests during a cold start.
 * Fixed bug with [Guassian Sharpen for large kernel values](http://code.google.com/p/aforge/issues/detail?id=307&q=GaussianSharpen&colspec=ID%20Stars%20Type%20Status%20Priority%20Project%20Milestone%20Owner%20Summary).
 * Fixed NullReferenceExcpetion in RemoteReader when no URLs are whitelisted.
-* Fixed bug in ImageBuilder.TranslatePoints() that causes incorrect result coordiantes when the image is being cropped. This method is infrequently used, and this bug would not affect image results.
+* Fixed bug in ImageBuilder.TranslatePoints() that causes incorrect result coordinates when the image is being cropped. This method is infrequently used, and this bug would not affect image results.
 * Fixed potential bug in ImageBuilder.Build - underlyingStream.Dispose() is called after bitmap.Dispose() now. No known effects reported, but this should ensure there are no issues if bitmap.Dispose() (for any reason) requires access to the underlying stream.
 * YARSMTF (Yet Another RackSpace Medium Trust fix): Diagnostics page no longer crashes while trying to report OS bitness - if RackSpace prevents access, it will skip the test.
 
@@ -31,7 +31,7 @@ Tags: releases
 * Added CropAround plugin
 * RedEye plugin now requires .NET 3.5 and depends on the Faces plugin.
 * Improved ImageHandler syntax support to permit overriding mode=stretch and stretch=fill. Added support for DAMP syntax (Umbraco Digibiz Advanced Media Picker)
-* Plugins now redact any sensitive information from the /resizer.debug diagnostics page, to proctect users who have set CustomErrors=Off.
+* Plugins now redact any sensitive information from the /resizer.debug diagnostics page, to protect users who have set CustomErrors=Off.
 
 ## Breaking changes in S3Reader
 
