--- a/content/releases/2-8.md
+++ b/content/releases/2-8.md
@@ -32,7 +32,7 @@ For changes between this and older versions,  read [the changelog](/docs/v2/chan
 * <span style="color:red;">Fixed serious limitation of ImageResizerMaxWidth/Height settings.</span>  
   These settings only control the size of the photo portion of the image. They do not limit the dimensions of the resulting bitmap. By using paddingWidth=100000, **an attacker could perform a denial-of-service attack against the server to deprive it of RAM.**
   
-  **New behavior**: When the final dimensions of an image would exceed 2x the configured max width and height, the request will be ignored with the following message: "The specified image will be more the 2x the permitted size. Request terminated."
+  **New behavior**: When the final dimensions of an image would exceed 2x the configured max width and height, the request will be ignored with the following message: "The specified image will be more than 2x the permitted size. Request terminated."
 
 
 ### Other bug fixes
