--- a/content/releases/3-3-0.md
+++ b/content/releases/3-3-0.md
@@ -23,7 +23,7 @@ The following bugs were not discovered in time to be fixed for this release. The
 * Changes to watermark settings in Web.config may require cache-breaking (or clearing) to take effect.
 * Under concurrent traffic, ASP.NET may lock partially-downloaded assemblies (for plugins with `downalodNativeDependencies=true` set) when running the application the first time on a new server. Call `Config.Current.Plugins.LoadPlugins()` from `App_Start` in `Global.asax.cs` to ensure this doesn't occur.
 
-The november 2012 release of the Azure SDK 2.0 completely broke backwards compatibility with V1.7, meaning we can't upgrade AzureReader to support 2.0 without breaking things for existing users (which would be especially bad for NuGet users). 
+The November 2012 release of the Azure SDK 2.0 completely broke backwards compatibility with V1.7, meaning we can't upgrade AzureReader to support 2.0 without breaking things for existing users (which would be especially bad for NuGet users). 
 
 The solution going forwards will be to release AzureReader2, and gradually phase out support for AzureReader.
 
@@ -66,7 +66,7 @@ The solution going forwards will be to release AzureReader2, and gradually phase
 
 * RedEye: Changed json schema slightly - rectangles now have .Accuracy instead of .accuracy, in order to match case of other members, and that of Faces.
 * Faces: Now automatically looks for 1-8 faces instead of just 1 by default.
-* FreeImage: Now decodes RAW files in display mode; this should produce might better results, but may change their appearance.
+* FreeImage: Now decodes RAW files in display mode; this should produce better results, but may change their appearance.
 
 
 ## New plugins
