--- a/content/releases/3-3-1.md
+++ b/content/releases/3-3-1.md
@@ -32,7 +32,7 @@ To ensure all dependencies get downloaded before ASP.NET starts locking them, ca
 ## Bug fixes in plugins
 
 * AzureReader2 supports Azure Storage Client 2.0
-* SourceMemCache: Changed the default cache size from 1GB to 10MB, as documention specifies.
+* SourceMemCache: Changed the default cache size from 1GB to 10MB, as documentation specifies.
 * Faces & RedEye now use the same directory calculation algorithm used by NativeDependencyManager to provide XML files. ImageProcessingExceptions are thrown instead of FileNotFoundExceptions for missing .xml files (FNFs are auto-converted to 404s).
 * Watermark: Added cache-breaking system
 * S3Reader has been rebuilt against the latest version of AWSSDK.dll.
