--- a/content/releases/3-3-2.md
+++ b/content/releases/3-3-2.md
@@ -22,5 +22,5 @@ Not yet fixed: When using auto-cropping (mode=crop), scale=down may sometimes be
 ## Bug fixes in Core (which affected DiskCache)
 
 * Fixed: IResponseHeaders.LastModified was still being written to HTTP headers, even when it had a value of DateTime.MinValue. Caused by timezone difference.
-* Fixed: ClientCache was forcing HTTP last-modified to match the source file. This is incorrect behavior. Together with the previous bug, this was preventing 304-Not-Modified from being returned properly when usine DiskCache. Bug was introduced in 3.3.0.
+* Fixed: ClientCache was forcing HTTP last-modified to match the source file. This is incorrect behavior. Together with the previous bug, this was preventing 304-Not-Modified from being returned properly when using DiskCache. Bug was introduced in 3.3.0.
 * Fixed: Improved error messages for image decoding issues
