--- a/content/releases/3-1-3.md
+++ b/content/releases/3-1-3.md
@@ -21,7 +21,7 @@ This release fixes some bugs in V3.1, adds some new features, and introduces 2 n
 * [S3Reader](/plugins/s3reader) no longer silently fails when there is a problem with the S3 bucket; the error is thrown properly, and is displayed if error display is enabled. Also, bucket names are now case-insensitive and whitespace is ignored.
 * [S3Reader](/plugins/s3reader) now supports non-US buckets when useSubdomains="true". The default is false for compatibility with legacy buckets.  
 * When an empty stream is passed to the ImageResizer, a more informative message is used in the exception. 
-* Null values assigned to querystring keys during the Rewrite event no longer block default values assigned in the RewriteDefaults event.
+* Null values assigned to querystring keys during the Rewrite event. No longer block default values assigned in the RewriteDefaults event.
 
 ## New destination path syntax
 
@@ -57,7 +57,7 @@ This can be useful, as uploaded filenames are usually unacceptable for use on th
 
 * Jason Morse brought us the [PdfRenderer plugin](/plugins/pdfrenderer), which I promptly reviewed and tested, and decided to include immediately due to its great code quality.
 * The extremely boring [IEPngFix plugin](/plugins/iepngfix), for those who still care about IE6. 
-* It's official, you can now use 'w' and 'h' instead of 'width' and 'height'. 9 less characters to type!
+* It's official; you can now use 'w' and 'h' instead of 'width' and 'height'. 9 less characters to type!
 * [Presets plugin](/plugins/presets) now works with managed API as well as URL API. (Managed API does not enforce the OnlyAllowPresets setting). 
 * The ImageResizer can now 'auto-create' the parent directory for an image it is writing. Use ImageJob and set `CreateParentDirectory` to true. Nice for uploads.
 
