--- a/content/releases/3-1-5.md
+++ b/content/releases/3-1-5.md
@@ -54,7 +54,7 @@ These bugs were discovered several weeks after release. Please contact support@i
 
 * Psd Parser: Culture-invariant, and now BinaryReverseReader explicitly uses code page ISO-8859-1 instead of the system default. 
 * PsdCommandBuilder: Added support for null and empty string values in string dictionaries. Made color parsing culture invariant. Made all layer name comparisons OrdinalIgnoreCase instead of CurrentCultureIgnoreCase
-* MemCachedFile now throws FileNotFoundException when the PSD files is missing, which turns into an HTTP 404 error and allows Image404 to work.
+* MemCachedFile now throws FileNotFoundException when the PSD files are missing, which turns into an HTTP 404 error and allows Image404 to work.
 * Now supports virtual source files, anything IVirtualFile (must be registered before those plugins, however).
 * No longer inherits from VirtualPathProvider - just implements IVirtualImageProvider. No longer supports IVirtualFileWithModifiedDate due to caching without dependencies.
 * When strict mode is disabled, ignores missing fonts and uses generic sans serif instead.
