Rewrite 3.4.0 release notes (nearly done!)

--- a/content/releases/3-4-0.md
+++ b/content/releases/3-4-0.md
@@ -1,59 +1,77 @@
 Date: Oct 15 2013
 FullFile: 
 MinFile: 
-Summary: New plugins and lots of bug fixes
+Summary: 4 new plugins and 11 bug fixes
 ShortVersion: 3.4.0
 Flags: hidden
 
-# Resizer 3.4.0 - March 2 2013
+# Resizer 3.4.0 - October 16 2013
 
 ## New plugins
 
-* SourceDiskCache enables source file disk caching. (Found in DiskCache.dll)
-* FFMpegPlugin enables video thumbnailing
+* [SourceDiskCache](/plugins/diskcache) enables source file disk caching. 
+* [MemCache and OutputMemCache](/plugins/diskcache) enable fixed-size source and output mem caching
+* [FFMpegPlugin](/plugins/ffmpeg) enables video thumbnailing
 
-## Changes to ImageResizer.dll core
+## New guidance
 
-Added recompilation detection/warning on diagnostics page.
-Added explicit Flush call for all I/O operations (helps with certain patch-levels of .NET)
-Instructions.CropRectange is now deprecated - use Instructions.CropRectangle instead.
-
-Added ImageJob.SourceWidth, ImageJob.SourceHeigh, ImageJob.ResultFileExtension, ImageJob.ResultMimeType
-Fixed bug #45: DefaultSettings doesn't work with w/h
-
-Added ImageBuilder.LoadImageInfo(object source, string[] requestedInfo]
-Marked dangerous ImageBuilder methods as obsolete
-Added support for Dest type typeof(IDictionary<string, object>) in the default pipeline (forgoes actual build process)
-Added ImageJob.ResultInfo
-Added ImageJob.RequestedInfo
-added new ImageJob(source, requestedInfo)
-Changed .SourceWidth, .SourceHeight, .ResultFileExtension, and .ResultMimeType to be read-only, pulling from ResultInfo
+* Use the `Instructions` class instead of `ResizeSettings` whenever possible. `ResizeSettings` will eventually be removed.
+* If you use any plugins with native dependencies, call `ImageResizer.Configuration.Config.Current.Plugins.LoadPlugins()` during Application_Start. 
+* Don't work directly with Bitmap instances. Methods that return a Bitmap instance are now marked obsolete due to the high probability of memory leaks and encoding bugs in user code.
+* Unit tests now require .NET 4.5 to run. The core library and most plugins can still be compilied under Visual Studio 2008 or higher.
+* Does your plugin need to pass additional information back to the ImageJob? Use ImageJob.ResultInfo.
 
 
-Introduced IFileSignatureProvider and added default implementation to DefaultEncoder.
+## Bug fixes in core
 
-Marked ImageBuilder.LoadImage as Obsolete. Added ImageBuilder.Build(source,dest, Instructions) (returns ImageJob).
+* Fixed: Combining manual cropping and sourcerotation (`crop=0,10,30,30&srotate=90`) causes distorion. Bug introduced in 3.3.2 with CMYK fix. (#51)
+* Fixed: DefaultSettings plugin doesn't work with w/h abbreviation (#45) 
+* Fixed: Improved I/O predictability through explicit Flush calls for all I/O operations. (Breaking change in .NET 4 - closing a FileStream does not always flush it).
+* Fixed: Instructions.CropRectangle is now spelled correctly. Mispelling will also remain functional until the next major release.
+
+## Known remaining bugs
+
+* AzureReader2 and 404plugin are incompatible
+* When using auto-cropping (mode=crop), scale=down may sometimes be ignored, acting as if scale=both was set.
+* .NET 4 introduces a FileStream.Flush(true) method to restore the flush-to-disk guarantee. When we move to .NET 4 in the next major release, we will use it.
+
+## Improvements to core
+
+* You can now access SourceWidth and SourceHeight after running an ImageJob, as well as the ResultFileExtension and ResultMimeType. Only the default pipeline populates this data for now - WIC and FreeImage support comes later.
+* You can now read the size of an image without resizing it, using `ImageBuilder.LoadImageInfo(object source, string[] requestedInfo)`.
+* An ImageJob can return information instead of a result image now. Added `new ImageJob(source, requestedInfo)`, ImageJob.RequestedInfo, and ImageJob.ResultInfo.
+* Introduced IFileSignatureProvider and added default implementation to DefaultEncoder. This allows plugins to provide unified file type detection data.
+* The diagnostics page now warns you if precompilation is detected (it breaks data source plugins).
+* Dangerous ImageBuilder methods (such as `LoadImage` and `Build(bitmap,settings)`) are now marked as obsolete (see guidance section above)
 
 ### Changes to DiskCache plugin
-* Fixed rare bug in DiskCache (serving file that is partially flushed to disk). Only occurs when file system write caching is disabled.
+
+* Fixed rare 500 bug in DiskCache (serving file that is partially flushed to disk). More likely to occur when file system write caching is disabled.
 * Fixed: Diskcache blocked any url including the segment /imagecache/, instead of just the root instance. Note that if you have sub-applications, those /imagecache/ folders will be exposed if DiskCache is not installed.
 
 ### Changes to SqlReader
+
 * Added support for stored procedures to SqlReader: via QueriesAreStoredProcedures setting.
 
 
 ### Changes to AzureReader2
 
-* Should fix #49 - AzureReader2 redirects incorrectly when hosted in a virtual folder.
+* Fixed bug with blob redirection when the application is hosted in a virtual folder instead of at the domain root. (Fixes #49)
+* Fixed bug causing 400 errors with newer version of Azure library ([thanks to Martin Larsen](http://stackoverflow.com/questions/18791817/receive-400-bad-request-from-image-resizer-request-in-azure))
 
-Updated MongoReader to 1.8 (Thanks @jakenuts!)
-Updated Newtonsoft.Json 
+
+## Changes to MongoReader
+
+* Updated MongoReader to 1.8 (Thanks @jakenuts!)
+* Updated Newtonsoft.Json 
+
 ### Changes to Watermark
 
-* Fixes #23. Watermark now throws a 500 error instead of a 404 if a watermark image can't be found.
+* Watermark now throws a 500 error instead of a 404 if a watermark image can't be found. (#23)
 
 ### Changes to RemoteReader
-* Fixed bug in RemoteReader - extension setting was still failing to work.
+
+* Fixed bug in RemoteReader - extension correction was still failing to work (causing PNG images to be rencoded as jpegs when no format was explicitly specified).
 
 
 
