--- a/content/releases/3-4-0.md
+++ b/content/releases/3-4-0.md
@@ -18,9 +18,8 @@ Flags: hidden
 * Use the `Instructions` class instead of `ResizeSettings` whenever possible. `ResizeSettings` will eventually be removed.
 * If you use any plugins with native dependencies, call `ImageResizer.Configuration.Config.Current.Plugins.LoadPlugins()` during Application_Start. 
 * Don't work directly with Bitmap instances. Methods that return a Bitmap instance are now marked obsolete due to the high probability of memory leaks and encoding bugs in user code.
-* Unit tests now require .NET 4.5 to run. The core library and most plugins can still be compilied under Visual Studio 2008 or higher.
+* Unit tests now require .NET 4.5 to run. The core library and most plugins can still be compilied under Visual Studio 2010 or higher. Run `PM> Update-Package -Reinstall` if your nuget packages aren't automatically restored.
 * Does your plugin need to pass additional information back to the ImageJob? Use ImageJob.ResultInfo.
-
 
 ## Bug fixes in core
 
