Add web garden details to 3.4.0 release note guidance as well.

--- a/content/releases/3-4-0.md
+++ b/content/releases/3-4-0.md
@@ -19,6 +19,7 @@ ShortVersion: 3.4.0
 * Don't work directly with Bitmap instances. Methods that return a Bitmap instance are now marked obsolete due to the high probability of memory leaks and encoding bugs in user code.
 * Unit tests now require .NET 4.5 to run. The core library and most plugins can still be compilied under Visual Studio 2010 or higher. Run `PM> Update-Package -Reinstall` if your nuget packages aren't automatically restored.
 * Does your plugin need to pass additional information back to the ImageJob? Use ImageJob.ResultInfo.
+* If you have more than 2 cores, consider using an IIS Web Garden or our [WIC pipeline](/plugins/wic) to get optimal throughput.
 
 ## Bug fixes in core
 
