--- a/content/releases/3-4-2.md
+++ b/content/releases/3-4-2.md
@@ -1,7 +1,7 @@
 Date: Nov 26 2013
 FullFile: http://downloads.imageresizing.net/Resizer3-4-2-full-Nov-26-2013.zip
 MinFile: http://downloads.imageresizing.net/Resizer3-4-2-min-Nov-26-2013.zip
-Summary: adds support for AWSSDK 2 
+Summary: New Release adds support for AWSSDK 2 
 ShortVersion: 3.4.2
 
 # Resizer 3.4.2 - November 26 2013
