--- a/content/releases/3-4-0.md
+++ b/content/releases/3-4-0.md
@@ -1,7 +1,7 @@
 Date: Oct 17 2013
 FullFile: http://downloads.imageresizing.net/Resizer3-4-0-full-Oct-17-2013.zip
 MinFile: http://downloads.imageresizing.net/Resizer3-4-0-min-Oct-17-2013.zip
-Summary: 4 new plugins and 11 bug fixes
+Summary: New release comes with 4 new plugins and 11 bug fixes.
 ShortVersion: 3.4.0
 
 # Resizer 3.4.0 - October 17 2013
