--- a/content/releases/3-4-1.md
+++ b/content/releases/3-4-1.md
@@ -1,7 +1,7 @@
 Date: Oct 30 2013
 FullFile: http://downloads.imageresizing.net/Resizer3-4-1-full-Oct-31-2013.zip
 MinFile: http://downloads.imageresizing.net/Resizer3-4-1-min-Oct-31-2013.zip
-Summary: 1 bug fix and 1 enhancement
+Summary: New release features 1 bug fix and 1 enhancement.
 ShortVersion: 3.4.1
 
 # Resizer 3.4.1 - October 30 2013
