--- a/content/releases/3-0-13.md
+++ b/content/releases/3-0-13.md
@@ -9,7 +9,7 @@ Summary: 6 bug fixes, raw support, and 1 breaking change (renaming the FriendlyU
 
 ## Manual steps for users of the FriendlyUrls plugin
 
-Version 3.0.13 does not include `ImageResizer.Plugins.FriendlyUrls.dll`! The FriendlyUrls plugin is now included in `ImageResizer.dll`, and has been renamed to `FolderResizeSyntax`. This change reduces the number of dlls you need to deploy, and simplifies migration for v2 customers.
+Version 3.0.13 does not include `ImageResizer.Plugins.FriendlyUrls.dll`! The FriendlyUrls plugin is now included in `ImageResizer.dll`, and has been renamed to `FolderResizeSyntax`. This change reduces the number of DLLs you need to deploy, and simplifies migration for v2 customers.
 
 * Change `<add name="FriendlyUrls" />` to `<add name="FolderResizeSyntax" />` in Web.config and remove `ImageResizer.Plugins.FriendlyUrls` through Project References, /bin/, or nuget. 
 
