--- a/content/releases/4-0-4.md
+++ b/content/releases/4-0-4.md
@@ -7,7 +7,7 @@ ShortVersion: 4.0.4
 
 # Resizer 4.0.4 - Oct 25 2015
 
-## Up to 10x faster overall; 43x faster rendering with our [custom C rendering engine](https://http://imageresizing.net/docs/v4/plugins/fastscaling). We also improved image quality and added precise sharpening tools. [Read v4 highlights here](http://localhost:4004/blog/2015/v4highlights)
+## Up to 10x faster overall; 43x faster rendering with our [custom C rendering engine](http://imageresizing.net/docs/v4/plugins/fastscaling). We also improved image quality and added precise sharpening tools. [Read v4 highlights here](http://imageresizing.net/blog/2015/v4highlights)
 
 **Excellent backwards-compatibility with v3.X, although we now require .NET 4.5.2 or higher.**
 
