--- a/content/releases/4-1-7.md
+++ b/content/releases/4-1-7.md
@@ -11,7 +11,7 @@ ShortVersion: 4.1.7
 * Fixes memory leak in OpenCV (Faces, RedEye) by upgrading OpenCVSharp
 * Performance improvements
 * Adds performance monitoring (see /resizer.debug)
-* Adds support for remote license files and remote reporting of performance/configuration metrics. If you are using a remote license file, check /resizer.debug to see exactly what will be reported.
+* Adds support for remote license files and remote reporting of performance and environment/config metrics. If you are using a remote license file, check /resizer.debug to see exactly what will be reported. By using a remote license you agree to have this information logged when your license file is fetched. We will not sell this information; we primarily use it to determine the focus of our development and optimization efforts.
 
 166 commits: https://github.com/imazen/resizer/compare/v4.0.5...v4.1.7
 
